--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Site Bookmarker</title>
+    <title>Bookmarker</title>
 
-    <!-- Bootstrap core CSS -->
+   
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -43,7 +43,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; 2016 Bookmarker, Inc.</p>
+        <p>&copy; 2018 Lalit, Inc.</p>
       </footer>
 
     </div> <!-- /container -->
