--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <label>Site URL</label>
             <input type="text" class="form-control" id="siteUrl" placeholder="Website URL">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-success">Submit</button>
         </form>
       </div>
 
